small fix in map visualization on mobile

--- a/GoTripApplication/src/app/trip-details/map/map.component.css
+++ b/GoTripApplication/src/app/trip-details/map/map.component.css
@@ -1,8 +1,8 @@
 #map{
-    width: 100%;
-    height: 60%;
+    width: 100vw;
+    height: 100%;
     min-height: 400px;
-    min-width: 400px;
+    min-width: 300px;
   }
 
 .heading {
